--- a/angular.json
+++ b/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "base-chat": {
@@ -145,6 +145,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "base-chat"
+    }
+  },
+  "defaultProject": "base-chat",
+  "cli": {
+    "analytics": "bb5bc3c8-2e3b-4bf5-bead-6831b29e05f4"
+  }
 }
